# TEMPS

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  app.py  index.html  pyproject.toml  sitemap.xml  train.py
.github/workflows/: basic_AT.yml  deploy_docs.yml  huggingface.yml
data/: config.yaml
data/models/: modelF_DA.pt  modelF_DA_ontest_alldata.pt  modelF_L15.pt  modelF_z.pt  modelZ_DA.pt  modelZ_DA_ontest_alldata.pt  modelZ_L15.pt  modelZ_z.pt
docs/: README.md  mkdocs.yml
docs/.ipynb_checkpoints/: mkdocs-checkpoint.yml
docs/docs/: index.md
docs/site/: 404.html  index.html  sitemap.xml
insight/: archive.py  insight.py  insight_arch.py  utils.py
insight/.ipynb_checkpoints/: archive-checkpoint.py  insight_arch-checkpoint.py  utils-checkpoint.py
notebooks/: CVAE-Copy1.ipynb  CVAE.ipynb  Colourspace.ipynb  Colourspace.py  Comparison_methodology.py  Feature_space.py  Fig2_NMAD.py  Fig3_PIT_CRPS.py  Fig4_pz_examples.py  Fig6_qualitycut.py  Fig7_colourspace.py  HandsON_outreach-Copy1.ipynb  Insight_notebook.ipynb  NMAD.py  Normalizing_flows_Freia.ipynb  Normalizing_flows_TEST-Copy3.ipynb  Normalizing_flows_TEST.ipynb  Normalizing_flows_Xiao+19-Copy1.ipynb  PIT_CRPS.py  PLOTS.ipynb  Qualitycut.py  Table_metrics.py  backup_notebook.ipynb  insight.pt  insight_notebook.ipynb  match_catalogues.ipynb  nz.py  pz_examples.py  toy_test.ipynb
notebooks/.ipynb_checkpoints/: CVAE-Copy1-checkpoint.ipynb  CVAE-checkpoint.ipynb  (+10 more)
scripts/: train.py
search/: search_index.json
temps/: __init__.py  app.py  archive.py  constants.py  plots.py  temps.py  temps_arch.py  utils.py
tests/: test_temps.py
(+1 files in other folders)
